# geomas

./: .gitignore  README.md  pyproject.toml
db/: Dockerfile  README.md  docker-compose.yaml
db/Pilot Codes_Shangde/: ARCHITECTURE.md  demo_full_workflow.py  mda_agent.py  metadata_output.json  metadata_scanner.py  planning_ontology.ttl  qp_agent.py  requirements.txt
db/Pilot Codes_Shangde/outputs/: analysis_spec.json  knowledge_base.json
db/seed/: 01_extensions.sql  10_load_vector_assets.sh  11_load_raster_assets.sh  20_manifest_vector.yaml  21_manifest_raster.yaml
queries/: BMPO-planner-examples-desc.md  BMPO-planner-examples.md
