[project]
name = "geomas"
version = "0.1.0"
description = "A multi-agent system for geospatial data processing and analytics."
authors = [
    {name = "Changjie Chen"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
